src/styles/style.css
/* ==========================
   VARIABLES
   ========================== */

:root{

  /* PRIMITIVE TOKENS 
  ========================== */

  /* Colors */
  --color-neutral-0: white;
  --color-neutral-100: #EBEBEB;
  --color-neutral-200: #DEDEDE;
  --color-neutral-600: #737373;
  --color-neutral-950: #121212;

  /* Spacing */
  --spacing-4px: 0.25rem; /* 4px */
  --spacing-8px: 0.5rem; /* 8px */
  --spacing-12px: 0.75rem; /* 12px */
  --spacing-16px: 1rem;  /* 16px */
  --spacing-20px: 1.25rem; /* 20px */
  --spacing-24px: 1.5rem; /* 24px */
  --spacing-40px: 2.5rem; /* 40px */
  --spacing-48px: 3rem; /* 48px */
  --spacing-64px: 4rem; /* 64px */
  --spacing-80px: 5rem; /* 80px */

  /* Radius */

  /* Typography */
  --type-primary: "neue-haas-unica", "Inter", Tahoma, Arial, sans-serif;



  /* SEMANTIC TOKENS
  ========================== */
  
  /* Colors */
  --color-background-primary: var(--color-neutral-0);

  --color-text-primary: var(--color-neutral-950);
  --color-text-secondary: var(--color-neutral-600);

  --color-divider-primary: var(--color-neutral-200);

  --color-header-background: var(--color-neutral-0);
  --color-footer-background: var(--color-neutral-0);


  --color-button-primary-background-default: var(--color-neutral-100);
  --color-button-primary-background-hover: var(--color-neutral-200);
  --color-button-primary-background-active: var(--color-neutral-950);


  --color-chip-primary-background-default: var(--color-neutral-0);

  /* Spacing */
  --spacing-page-margin: var(--spacing-20px);

  --spacing-grid-gap-column: var(--spacing-20px);
  --spacing-grid-gap-row: var(--spacing-64px);

  --spacing-section-gap-medium: var(--spacing-40px);
  --spacing-section-gap-large: var(--spacing-64px);



  /* Radius */
  --radius-xs: 0.25rem;
  --radius-card: 1rem;
  --radius-button: 0.75rem; 

  /* Sizes */
  --size-icon-small: 16px;
  --size-icon-medium: 24px;
  --size-icon-large: 32px;
}







/* ==========================
   RESET
   ========================== */

  * {
  margin: 0;
  padding: 0;
  }
  *,
  *::before,
  *::after {
  box-sizing: border-box;
  }


/* ==========================
  LAYOUT CONTAINERS
  ========================== */

  html, body {
  /* background-color: var(--color-background-primary);  */
  }

  .container-wide {
  margin: var(--spacing-page-margin);
  
  }

  .container {
  /* max-width: 1440px; */
  padding: 0 20px; 
  background-color: var(--color-background-primary);
  }


  /* HOME
  ========================== */
  .featured-work{
    display: grid;
    grid-template-columns: 1fr 1fr;
    column-gap: var(--spacing-grid-gap-column);
    row-gap: var(--spacing-grid-gap-row);
  }

  .featured-work :first-child {
    grid-column: span 2;
  }





/* ==========================
   TEXT STYLES
   ========================== */

   h1, h2, .body-large, .body-medium, p,.body-small, button, .chip, a, summary {
    font-family: var(--type-primary);
    font-weight: normal;
    color: var(--color-text-primary);
   }
  


/* HEADINGS 
  ========================== */

h1 {
  font-size: 56px; 
  line-height: 1;
}

h2 {
  font-size: 20px;
}

/* BODY 
  ========================== */

.body-large {
  font-size: 24px;
}

.body-medium {
  font-size: 20px;
}

p {
  font-size: 1rem; 
}

.body-small {
  font-size: 0.875rem;
}

/* LABEL 
  ========================== */

button {
  font-size: 1rem;
}

.chip {
  font-size: 0.875rem;
  line-height: 1;
}

/* LINKS 
  ========================== */

a {
  text-decoration: none;
}

/* DETAILS 
  ========================== */


summary {
    color: var(--color-text-secondary);
    font-size: 1.25rem;
    list-style: none;
    text-decoration: underline;
  }




/* ==========================
   HEADER
   ========================== */

  header {
    display: flex; 
    flex-flow: row wrap;
    background-color: var(--color-header-background);
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 1000;
  }

  header nav {
    width: 100%;
    display: flex;
    flex-flow: row wrap;
    align-items: center;
    justify-content: space-between;
  }

  header ul {
    display: flex;
    flex-flow: row wrap;
    gap: 1rem;
    list-style: none;
  }

  /* ==========================
   HOME
   ========================== */

   .featured-work a{
    position: relative;
    display: flex;
    flex-direction: column;
    gap: 1.5rem;
   }

   .featured-work p{
    color: var(--color-text-secondary); 
   }
  
   .img {
      width: 100%;
      height: 440px;
      background-color: skyblue;
      border-radius: var(--radius-card);
   } 

   .featured-work figure{
    /* position: relative; */
    overflow: hidden;
    width: 100%;
    height: 440px;
   }

  .featured-work img{
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: var(--radius-card);

    cursor: pointer; /* cambia el cursor */
    transition: transform 0.3s ease; /* suaviza el efecto */
  }

  .featured-work img:hover {
    transform: scale(1.05); 
  }


  .chip {
    position: absolute;
    top: var(--spacing-20px); 
    left: var(--spacing-20px);

    display: flex;
    align-items: center;
    justify-content: center;
    
    min-width: 40px;
    min-height: 40px;

    background: var(--color-chip-primary-background-default);

    padding: 8px;
    border-radius: 5rem;

    overflow: hidden;

    transition: all 0.3s ease;
  }


  .chip::after {
    content: "";

    display: inline-block;
    vertical-align: middle;
    transition: all 0.3s ease;

    width: var(--size-icon-medium);
    height: var(--size-icon-medium);

    background-image: url("../media/icons/arrow-up-right.svg");
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
  }


  .chip-text {
    max-width: 0;
    opacity: 0;
    /* overflow: hidden; */
    white-space: nowrap;
    transition: all 0.3s ease;
  }

  .featured-work a:hover .chip {
    gap: var(--spacing-4px); 
    padding: 8px 16px 8px 20px;
  }

  .featured-work a:hover .chip-text {
    max-width: 30ch; 
    opacity: 1;
    margin-left: 4px;
    display: inline-flex;
    align-items: center;
  }

  .featured-work a:hover .chip::after {
    transform: rotate(45deg);
  } 

  

  /* ==========================
   ARCHIVE
   ========================== */

  /* ==========================
   FILTERS */

  .filters{
    display: flex;
    flex-flow: row wrap;
    gap: 3rem;
  }

  .filters ul {
    display: flex;
    flex-flow: row wrap;
    gap: 1rem;
  }

  .filters li{
    list-style: none;
    line-height: 0.75rem;
  }
   

   .filters button {
    background-color: var(--color-neutral-100);
    border: none; 
    border-radius: var(--radius-button);
    padding: 0.5rem 0.75rem;
    cursor: pointer;
   }


  /* ==========================
   LIST */

  .arhive-list {
    display: flex;
    flex-direction: column;
  }

  .archive-list-item {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    height: 120px;
    border-bottom: 1px solid var(--color-divider-primary);
  }

  .archive-list-item div {
    display: flex;
    flex-direction: row;
    align-items: baseline;
    gap: var(--spacing-20px);
  }

  
  .archive-list p{
    color: var(--color-text-secondary);
  }

  .archive-list-item:hover h2::before {
    content: "";
    display: inline-block;
    width: var(--size-icon-small);
    height: var(--size-icon-small);
    margin-right: var(--spacing-12px);
    background-color: var(--color-button-primary-background-active);
    border-radius: var(--radius-xs);
    vertical-align: baseline;
    transition: transform 0.3s ease, opacity 0.3s ease;
    opacity: 1;
    transform: scale(1);
  }
  


  /* ==========================
  PROJECTS
  ========================== */

  /* HERO 
    ========================== */

  .hero-image{
    width: 100vw;
    height: 100vh;
    overflow: hidden;
    background-color: skyblue;
    position: sticky;
    top: 0;
    left: 0;
    z-index: -1; /* se queda detrás */
  }

  .hero-image img {
    width: 100%;
    height: 100%;
    object-fit: cover;
  }


  .project {
    position: relative;
    z-index: 1;
    /* margin-top: 100vh; */
  }




  /* PROJECT INFORMATION 
    ========================== */

  .project-info-grid {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-auto-rows: auto;  
    gap: var(--spacing-grid-gap-column);
    margin-top: var(--spacing-section-gap-medium);
    margin-bottom: var(--spacing-section-gap-large);

    /* Definir las áreas */
    grid-template-areas: 
      "project-title project-info"
      "project-tags project-description";
  }

  .project-title { 
    grid-area: project-title; 
    display: flex;
    align-items: flex-end;
  }
  
  .project-info { 
    grid-area: project-info; 
    display: flex;
    align-items: flex-end;
  }
  
  .project-tags { 
    grid-area: project-tags; 
  }
  
  .project-description { 
    grid-area: project-description; 
  }


  /* DETAILS */

  /* Close state */

  details{
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
    margin-top: 2rem;
  }

  .summary-toggle{
    order: 1;
  }

  .details-content {
    order: 2;
    display: none;
}

  /* Open state */
  details[open] .details-content {
    display: block;
    order: 1;
  }

  details[open] .summary-toggle {
    order: 2;
  }


  /* PROJECT MEDIA 
    ========================== */

    .project-media-grid {
      display: grid;
      grid-template-columns: repeat(2, 1fr);
      /* grid-template-columns: 1fr 1fr; */
      grid-auto-rows: auto;  
      gap: var(--spacing-grid-gap-column);
    }
    
    .project-media-item {
      background-color: skyblue;
      height: 440px;
      border-radius: var(--radius-card);
    }

    .project-media-item.col-1 {
      grid-column: span 1; /* Ocupa 1 columna */
    }

    .project-media-item.col-2 {
      grid-column: span 2; /* Ocupa 2 columnas */
    }



/* ==========================
   FOOTER
   ========================== */

  footer {
    display: flex; 
    flex-flow: row wrap;
    background-color: var(--color-footer-background);
  }

  footer div {
    width: 100%;
    display: flex;
    flex-flow: row wrap;
    align-items: center;
    justify-content: space-between;
  }

  footer nav {
    display: flex;
    flex-flow: row wrap;
    gap: 1rem;
    align-items: center;
    list-style: none;
  }

  footer ul{
    display: flex;
    flex-flow: row wrap;
    gap: 1rem;
    list-style: none;
  }

  footer a.body-large {
    display: inline-flex;   
  }

  footer a.body-large::before {
    content: "";
    display: inline-block;
    width: var(--size-icon-large);
    height: var(--size-icon-large);
    align-self: center;
    margin-right: 8px;
    color: var(--color-neutral-950);

    background-image: url("../media/icons/arrow-elbow-left-up.svg");
    background-size: contain;
    background-repeat: no-repeat;
  }


  /* ====================================================
   RESPONSIVE
   ==================================================== */

